--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head><script src="Hadal/assets/js/color-modes.js"></script>
+  <head><script src="assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -345,6 +345,7 @@
 
 </main>
 
+<!--
 <footer class="text-body-secondary py-5">
   <div class="container">
     <p class="float-end mb-1">
@@ -358,3 +359,4 @@
 
     </body>
 </html>
+  -->
