--- a/index.html
+++ b/index.html
@@ -126,27 +126,6 @@
         </div>
       </div>
     </template>
-    
-<header data-bs-theme="dark">
-  <div class="collapse text-bg-dark" id="navbarHeader">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4>About</h4>
-          <p class="text-body-secondary">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-        </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4>Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -169,11 +148,11 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Album example</h1>
-        <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <h1 class="fw-light">Hadal Work in Progress</h1>
+        <p class="lead text-body-secondary">Explore a collection of dated images and insights detailing the development process and progress of my upcoming underwater shooter game, Hadal.</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Link to Demo</a>
-          <a href="#" class="btn btn-secondary my-2">Link to Something Else</a>
+          <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Link to Demo</a>
+          <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2">Link to YouTube</a>
         </p>
       </div>
     </div>
