--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
           <img class="bd-placeholder-img card-img-top" 
                style="width: 100%; height: 225px; object-fit: cover;" 
                role="img" 
-               aria-label="Placeholder: Thumbnail">
+               aria-label="Placeholder: Thumbnail"
+               loading="lazy">
           <div class="card-body">
             <p class="card-text"></p>
           </div>
