--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="test.html">About</a>
+          <a class="nav-link active" aria-current="page" href="about.html">About</a>
         </li>
       </ul>
     </div>
