--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
           <div style="position: absolute; top: 10px; left: 10px; 
                       background-color: rgba(0, 0, 0, 0.5); 
-                      color: white; padding: 5px; font-size: 16px;">
+                      color: white; padding: 5px; font-size: 16px; border-radius: 8px;">
           </div>
         </div>
       </div>
@@ -138,7 +138,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="test.html">About</a>
+          <a class="nav-link active" aria-current="page" href="about.html">About</a>
         </li>
       </ul>
     </div>
