--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                role="img" 
                aria-label="Placeholder: Thumbnail"
                loading="lazy"
-               background-color="lightgray">
+               background-color="gray">
           <div class="card-body">
             <p class="card-text"></p>
           </div>
@@ -138,7 +138,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="about.html">About</a>
+          <a class="nav-link active" aria-current="page" href="test.html">About</a>
         </li>
       </ul>
     </div>
