--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <template id="card-template">
       <div class="col">
         <div class="card shadow-sm">
+          <svg class="bd-placeholder-img card-img-top" style = "position: absolute; z-index: -1" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
           <img class="bd-placeholder-img card-img-top" 
                style="width: 100%; height: 225px; object-fit: cover;" 
                role="img" 
