--- a/index.html
+++ b/index.html
@@ -112,13 +112,21 @@
     <template id="card-template">
       <div class="col">
         <div class="card shadow-sm">
-          <svg class="bd-placeholder-img card-img-top" style = "position: absolute; z-index: -1" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+          <!-- Placeholder SVG for lazy loading -->
+          <svg class="bd-placeholder-img card-img-top" style="position: absolute; z-index: 1;" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#55595c"/>
+          </svg>
+    
+          <!-- Lazy loaded image with a placeholder that will be replaced once the image loads -->
           <img class="bd-placeholder-img card-img-top" 
-               style="width: 100%; height: 225px; object-fit: cover;" 
+               style="width: 100%; height: 225px; object-fit: cover; visibility: hidden;" 
                role="img" 
-               aria-label="Placeholder: Thumbnail"
+               aria-label="Thumbnail" 
                loading="lazy"
-               background-color="gray">
+               src="your-image-url.jpg"
+               onload="this.style.visibility='visible'; this.previousElementSibling.style.display='none';">
+    
           <div class="card-body">
             <p class="card-text"></p>
           </div>
