--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
       <div class="col">
         <div class="card shadow-sm">
           <!-- Placeholder SVG for lazy loading -->
-          <svg class="bd-placeholder-img card-img-top" style="position: absolute; z-index: 1;" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <svg class="bd-placeholder-img card-img-top" style="position: absolute; z-index: 0;" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#55595c"/>
           </svg>
     
           <!-- Lazy loaded image with a placeholder that will be replaced once the image loads -->
           <img class="bd-placeholder-img card-img-top" 
-               style="width: 100%; height: 225px; object-fit: cover; visibility: hidden;" 
+               style="width: 100%; height: 225px; object-fit: cover; visibility: hidden; position: relative; z-index: 1;" 
                role="img" 
                aria-label="Thumbnail" 
                loading="lazy"
