Lazy changed again

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
   <body>
     <template id="card-template">
       <div class="col">
-        <div class="card shadow-sm">
+        <div class="card shadow-sm" style="position: relative;">
           <!-- Placeholder SVG for lazy loading -->
-          <svg class="bd-placeholder-img card-img-top" style="position: absolute; z-index: 0;" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <svg class="bd-placeholder-img card-img-top" style="position: absolute; top: 0; left: 0; z-index: 0;" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
             <title>Placeholder</title>
             <rect width="100%" height="100%" fill="#55595c"/>
           </svg>
