--- a/index.html
+++ b/index.html
@@ -112,15 +112,9 @@
     <template id="card-template">
       <div class="col">
         <div class="card shadow-sm">
-          <!-- Placeholder SVG for lazy loading -->
-          <svg class="bd-placeholder-img card-img-top" style="position: relative; width: 100%; height: 225px; object-fit: cover;" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c"/>
-          </svg>
-    
           <!-- Lazy loaded image with a placeholder that will be replaced once the image loads -->
           <img class="bd-placeholder-img card-img-top" 
-               style="width: 100%; height: 225px; object-fit: cover; opacity: 0; transition: opacity 0.5s ease;" 
+               style="width: 100%; height: 225px; object-fit: cover; opacity: 0; transition: opacity 0.5s ease; background-color: black;" 
                role="img" 
                aria-label="Thumbnail" 
                loading="lazy"
