--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
         <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
       <div class="col-md-6">
-        <img src="Hadal.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
+        <img src="Hadal(1).png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
       </div>
     </div>
   </div>
