Last changes for tonight

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
         background: rgba(0, 0, 0, 0.6); /* Dark overlay behind text */
         color: white; /* Ensures text is readable */
         padding: 2rem;
+        margin-left: 3%;
+        margin-right: 3%;
         border-radius: 10px;
       }
 </style>
