--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
       .bg-oceanblue {
         background-color: #062544; /* Replace with your desired color */
       }
-
+      .bg-oceanbluelight {
+        background-color: #134272; /* Replace with your desired color */
+      }
       .bg-oceandarkblue {
         background-color: #02162b; /* Replace with your desired color */
       }
@@ -128,6 +130,7 @@
       }
       body {
         font-family: 'Jersey 20', sans-serif;
+        padding-top: 56px;
       }
        .banner-section {
         position: relative;
@@ -189,7 +192,7 @@
       </div>
     </template>
 
-<nav class="navbar navbar-expand-lg bg-oceanblue">
+<nav class="navbar navbar-expand-lg bg-oceanbluelight fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Hadal</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
