--- a/about.html
+++ b/about.html
@@ -129,6 +129,7 @@
       }
       body {
         font-family: 'Jersey 20', sans-serif;
+        padding-top: 56px;
       }
         html, body {
         overflow: auto; /* or overflow-y: auto; */
