--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   createCard('CompressedMedia/OceanGameTestURP 11_1_2024 2_33_11 PM.png', 'Started tweaking the terrain shaders to better match the aesthetic of the overall underwater theme and environment.', 'November 2024');
   createCard('CompressedMedia/OceanGameTestURP 11_1_2024 2_33_17 PM.png', 'Further optimizations for performance, especially with handling underwater objects and visibility in complex scenes.', 'November 2024');
   createCard('CompressedMedia/OceanGameTestURP 11_1_2024 2_33_24 PM.png', 'An additional test of the underwater effects, with the focus on water distortion and visual coherence.', 'November 2024');
-  createCard('CompressedMedia/OceanGameTestURP 11_1_2024 2_33_32 PM.png', 'The latest version of the underwater environment that includes better water transparency, wave effects, and improved object lighting and shadows.', 'November 2024');
+  createCard('CompressedMedia/OceanGameTestURP 11_1_2024 2_33_32 PM.png', 'Underwater environment that includes better water transparency, wave effects, and improved object lighting and shadows.', 'November 2024');
 
   createCard('CompressedMedia/OceanGame 10_26_2024 6_11_22 PM.png', 'Adding different kelp lengths, and grass LODs for performance.', 'October 2024');
   createCard('CompressedMedia/OceanGame 10_26_2024 6_11_30 PM.png', 'More tweaks to foliage and vegetation, optimizing for performance while keeping visual fidelity.', 'October 2024');
