--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     dateDiv.textContent = date;
 
     // Append the cloned template to the card container
-    card.addEventListener("click", function () {
+    img.addEventListener("click", function () {
         openModal(imageSrc);
     });
     document.getElementById('albumContainer').appendChild(clone);
