--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       max-height: 90%;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      margin: auto;
     }
     body.modal-open {
       overflow: hidden;
