--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         margin-right: 3%;
         border-radius: 10px;
       }
-      #imageModal {
+      .imageModal {
   display: flex;
   position: fixed;
   top: 0;
@@ -175,7 +175,7 @@
   display: none;
 }
 
-#modalImage {
+.modalImage {
   max-width: 90%;
   max-height: 90%;
   border-radius: 10px;
