--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     dateDiv.textContent = date;
 
     // Append the cloned template to the card container
-    img.addEventListener("click", function () {
+    clone.addEventListener("click", function () {
         openModal(imageSrc);
     });
     document.getElementById('albumContainer').appendChild(clone);
