More graphical interface tweaks

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     </div>
   </section>
 
-  <div class="container px-4 py-5 mx-auto bg-oceanblue" style="margin-bottom: 3%; margin-top: 3%; border-radius: 10px;">
+  <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
     <div class="row gx-5">
       <div class="col-md-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">What is the Game About?</h1>
