Updated for large displays

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <div class="album py-5 bg-oceanblue">
     <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id = "albumContainer">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-3" id = "albumContainer">
       </div>
       </div>
     </div>
