Major link updates

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="Explore the deep, battle bosses, and acquire powerful weapons in this unique underwater shooter.">
     <meta property="og:image" content="https://i.postimg.cc/90chSFcC/Hadal1.png"/>
     <meta property="og:type" content="website">
-    <link rel="icon" href="Hadal1.png" type="image/x-icon">
+    <link rel="icon" href="Assets/Hadal1.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -36,7 +36,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="album.html">Album</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="externallinks.html">External Links</a>
           </li>
         </ul>
       </div>
@@ -68,7 +74,7 @@
         <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
       <div class="col-md-6">
-        <img src="Hadal1.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
+        <img src="Asset/Hadal1.png" alt="Hadal Game" class="img-fluid rounded-start" style="max-width: 100%; height: auto;">
       </div>
     </div>
   </div>
