--- a/album.html
+++ b/album.html
@@ -49,14 +49,42 @@
     </div>
   </nav>
 
-<main>
+    <template id="card-template">
+      <div class="col">
+        <div class="card shadow-sm">
+          <!-- Lazy loaded image with a placeholder that will be replaced once the image loads -->
+          <img class="bd-placeholder-img card-img-top" 
+               style="width: 100%; height: 225px; object-fit: cover; opacity: 0; transition: opacity 0.5s ease; background-color: black;" 
+               role="img" 
+               aria-label="Thumbnail" 
+               loading="lazy"
+               src="your-image-url.jpg"
+               onload="this.style.opacity='1';">
+    
+          <div class="card-body">
+            <p class="card-text" style="font-size: 20px;"></p>
+          </div>
+          <div style="position: absolute; top: 10px; left: 10px; 
+                      background-color: rgba(0, 0, 0, 0.5); 
+                      color: white; padding: 5px; font-size: 16px; border-radius: 8px;">
+          </div>
+        </div>
+      </div>
+    </template>
 
+<main>
   <img id="banner-image" src="Media/Screenshot 2025-03-28 204102.png" style="display: none;" onload="document.querySelector('.banner-section').classList.add('loaded');">
+  <div id="imageModal">
+    <div id="imageContent" style="background-color: #212529;">
+      <img id="modalImage">
+      <p id="imageText">This is the text beneath the image.</p>
+    </div>
+  </div>
   <section class="py-5 text-center container-fluid banner-section">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto banner-content">
-        <h1 class="fw-light">Hadal</h1>
-        <p class="lead text-body-secondary">Dive into the depths of Hadal.</p>
+        <h1 class="fw-light">Hadal Work in Progress</h1>
+        <p class="lead text-body-secondary">Explore a collection of dated images and insights detailing the development process and progress of my upcoming underwater shooter game, Hadal.</p>
         <p>
           <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Itch.io Demo</a>
           <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
@@ -65,11 +93,10 @@
     </div>
   </section>
 
-  <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
-    <div class="row gx-5">
-      <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Hadal, Upcoming Underwater FPS Game</h1>
-        <p class="lead">Explore the other links on this page to see more. Explore the album page to see an updated image collection from development of the game. Explore the about to learn more about the game itself. Explore the external links to see more content and demo builds.</p>
+  <div class="album py-5 bg-oceanblue">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-3" id = "albumContainer">
+      </div>
       </div>
     </div>
   </div>
@@ -77,18 +104,49 @@
 </main>
 
 
+
 <script>
   document.documentElement.setAttribute('data-bs-theme', 'dark');
+  function createCard(imageSrc, text, date) {
+    // Clone the template content
+    const template = document.getElementById('card-template');
+    const clone = template.content.cloneNode(true);
+
+    // Set dynamic values
+    const img = clone.querySelector('img');
+    const cardText = clone.querySelector('.card-text');
+    const dateDiv = clone.querySelector('.card-body + div');  // More specific selector for the date div
+
+    img.src = imageSrc;
+    cardText.textContent = text;
+    dateDiv.textContent = date;
+    const card = clone.querySelector('.card');
+    // Append the cloned template to the card container
+      card.addEventListener("click", function () {
+          openModal(imageSrc, text);
+      });
+
+    document.getElementById('albumContainer').appendChild(clone);
+  }
+  function openModal(imageSrc, text) {
+    const modal = document.getElementById("imageModal");
+    const modalImg = document.getElementById("modalImage");
+    const imageText = document.getElementById("imageText");
+    imageText.textContent = text
+    document.body.classList.add("modal-open");
+    modalImg.src = imageSrc;
+    modal.style.display = "block";
+  }
+  // Close modal when clicked outside the image
+  document.getElementById("imageModal").addEventListener("click", function () {
+    this.style.display = "none";
+    document.body.classList.remove("modal-open");
+  });
+
+
 
 </script>
-<!--
-<footer class="row py-lg-5" style="position: fixed; bottom: 0; width: 100%; z-index: 999; display: flex; justify-content: flex-start; align-items: center;">
-    <div style="display: flex; justify-content: center; width: 100%;">
-        <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2" style="margin-right: 5px;">Itch.io Demo</a>
-        <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
-    </div>
-</footer>
--->
+<script src="index.js"></script> 
 
     </body>
 </html>
