--- a/externallinks.html
+++ b/externallinks.html
@@ -55,24 +55,16 @@
   <section class="py-5 text-center container-fluid banner-section">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto banner-content">
-        <h1 class="fw-light">Hadal</h1>
+        <h1 class="fw-light">External Links</h1>
         <p class="lead text-body-secondary">Dive into the depths of Hadal.</p>
         <p>
           <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Itch.io Demo</a>
           <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
+          <a href="#" class="btn btn-primary my-2">Steam Page TBD</a>
         </p>
       </div>
     </div>
   </section>
-
-  <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
-    <div class="row gx-5">
-      <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Hadal, Upcoming Underwater FPS Game</h1>
-        <p class="lead">Explore the other links on this page to see more. Explore the album page to see an updated image collection from development of the game. Explore the about to learn more about the game itself. Explore the external links to see more content and demo builds.</p>
-      </div>
-    </div>
-  </div>
 
 </main>
 
