--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row gx-5">
       <div class="col-md-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Hadal, Upcoming Underwater FPS Game</h1>
-        <p class="lead">Explore the other links on this page to see more. Explore the album page to see an updated image collection from development of the game. Explore the about to learn more about the game itself. Explore the external links to see more content and demo builds.</p>
+        <p class="lead">Check out the other links on this page for more! Visit the album page for the latest development images, the about section to learn more about the game, and the external links for extra content and demo builds.</p>
       </div>
     </div>
   </div>
