Name included, updated landing page.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
   <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
     <div class="row gx-5">
       <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Hadal, Upcoming Underwater FPS Game</h1>
+        <h1 class="display-5 fw-bold lh-1 mb-3">Hadal, In-Development Underwater FPS Game</h1>
         <p class="lead">Check out the other links on this page for more! Visit the album page for the latest development images, the about section to learn more about the game, and the external links for extra content and demo builds.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="CompressedMedia\OceanGame - OutdoorsScene - Windows, Mac, Linux - Unity 2022.3.20f1 _DX11_ 4_3_2024 4_41_57 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
+        <p class="lead" style="font-style: italic;">Very early in-development screenshot.</p>
       </div>
     </div>
   </div>
