--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <div class="row gx-5">
       <div class="col-md-6">
         <h1 class="display-5 fw-bold lh-1 mb-3">Who is the Developer?</h1>
-        <p class="lead">I'm a solo developer working on this game as a side project, so progress is a bit slow. I'll keep this site updated with any changes or new developments—just check out the "Album" tab to stay in the loop!</p>
+        <p class="lead">Hi! I'm Anzeru, I'm a solo developer working on this game as a side project, so progress is a bit slow. I'll keep this site updated with any changes or new developments—just check out the "Album" tab to stay in the loop!</p>
       </div>
       <div class="col-md-6">
         <img src="CompressedMedia\Screenshot 2025-03-22 223717.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
