Updated multiple pages

--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
   <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
     <div class="row gx-5">
       <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">What is the Game About?</h1>
-        <p class="lead">Hadal is an in-development boomer shooter that puts players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. Features stylized graphics and fast paced gameplay.</p>
-        <p class="lead">The game features a variety of gameplay mechanics, including exploration, mobility, and shooter combat. Players will need to use their wits and skills to survive in this unforgiving environment.</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3" style="background-color: #02162b; padding: 15px; border-radius: 10px;">What is the Game About?</h1>
+        <p class="lead" style="background-color: #02162b; padding: 15px; border-radius: 10px;">Hadal is an in-development boomer shooter that puts players in the depths of the ocean, where they must navigate through treacherous waters and face off against terrifying sea creatures. Features stylized graphics and fast paced gameplay.</p>
+        <p class="lead" style="background-color: #02162b; padding: 15px; border-radius: 10px;">The game features a variety of gameplay mechanics, including exploration, mobility, and shooter combat. Players will need to use their wits and skills to survive in this unforgiving environment.</p>
         <img src="CompressedMedia/Hadal 3_26_2025 9_38_06 PM.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
       </div>
       <div class="col-md-6">
@@ -81,8 +81,8 @@
   <div class="container-fluid px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
     <div class="row gx-5">
       <div class="col-md-6">
-        <h1 class="display-5 fw-bold lh-1 mb-3">Who is the Developer?</h1>
-        <p class="lead">Hi! I'm Anzeru, I'm a solo developer working on this game as a side project, so progress is a bit slow. I'll keep this site updated with any changes or new developments—just check out the "Album" tab to stay in the loop!</p>
+        <h1 class="display-5 fw-bold lh-1 mb-3" style="background-color: #02162b; padding: 15px; border-radius: 10px;">Who is the Developer?</h1>
+        <p class="lead" style="background-color: #02162b; padding: 15px; border-radius: 10px;">Hi! I'm Anzeru, I'm a solo developer working on this game as a side project, so progress is a bit slow. I'll keep this site updated with any changes or new developments—just check out the "Album" tab to stay in the loop!</p>
       </div>
       <div class="col-md-6">
         <img src="CompressedMedia\Screenshot 2025-03-22 223717.png" alt="Hadal Game" class="img-fluid" style="max-width: 100%; height: auto; border-radius: 10px;">
