--- a/externallinks.html
+++ b/externallinks.html
@@ -59,12 +59,20 @@
         <p class="lead text-body-secondary">Dive into the depths of Hadal.</p>
         <p>
           <a href="https://anzeru-games.itch.io/hadal-demo-build" class="btn btn-primary my-2">Itch.io Demo</a>
-          <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
           <a href="#" class="btn btn-primary my-2">Steam Page TBD</a>
+          <a href="https://www.youtube.com/@anzeru" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 17); color: white; border-color: red;">YouTube</a>
+          <a href="https://www.instagram.com/hadalthegame/" class="btn btn-secondary my-2" style="background-color: rgb(179, 17, 157); color: white; border-color: rgb(255, 136, 0);">Instagram</a>
         </p>
       </div>
     </div>
   </section>
+  <div class="container-fluid text-center px- py-5 mx-auto bg-oceanblue" style="width:100%; padding-left: 15%; padding-right: 15%;">
+    <div class="row gx-5 justify-content-center">
+      <div class="col-md-6 d-flex justify-content-center">
+        <p class="lead" style="background-color: #02162b; padding: 15px; border-radius: 10px;">Any external links related to the game will be posted here, so far these are the only ones, but there may be more to come!</p>
+      </div>
+    </div>
+  </div>
 
 </main>
 
